--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,331 @@
-win32gui==221.6
+ai==0.0.3
+alabaster==0.7.12
+altair==4.1.0
+anaconda-client==1.7.2
+anaconda-navigator==1.10.0
+anaconda-project==0.8.3
+asgiref==3.2.3
+asn1crypto==1.0.1
+astor==0.8.1
+astroid==2.3.1
+astropy==3.2.1
+atomicwrites==1.3.0
+attrs==19.2.0
+Automat==0.8.0
+Babel==2.7.0
+backcall==0.1.0
+backports.functools-lru-cache==1.6.1
+backports.os==0.1.1
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+base58==2.1.0
+beautifulsoup4==4.8.0
+bitarray==1.0.1
+bkcharts==0.2
+bleach==3.1.0
+blinker==1.4
+blis==0.4.1
+bokeh==1.3.4
+boto==2.49.0
+Bottleneck==1.2.1
+bs4==0.0.1
+cachetools==4.2.1
+catalogue==1.0.0
+certifi==2019.9.11
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.2.2
+clyent==1.2.2
+collection==0.1.6
+colorama==0.4.1
+comtypes==1.1.7
+conda==4.9.0
+conda-build==3.18.9
+conda-package-handling==1.6.0
+conda-verify==3.4.2
+constantly==15.1.0
+construct==2.9.45
+contextlib2==0.6.0
+Counter==1.0.0
+cryptography==2.7
+cssselect==1.1.0
+cycler==0.10.0
+cymem==2.0.4
+Cython==0.29.13
+cytoolz==0.10.0
+dask==2.5.2
+decorator==4.4.0
+defusedxml==0.6.0
+distributed==2.5.2
+Django==3.0.1
+docopt==0.6.2
+docutils==0.15.2
+docx==0.2.4
+easyocr==1.2.5.1
+en-core-web-sm==2.3.1
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+filelock==3.0.12
+Flask==1.1.1
+flow==0.0.1
+fsspec==0.5.2
+future==0.18.2
+futures==3.1.1
+gevent==1.4.0
+gitdb==4.0.5
+GitPython==3.1.14
+glob2==0.7
+googledrivedownloader==0.4
+goslate==1.5.1
+greenlet==0.4.15
+gTTS==2.1.1
+gTTS-token==1.1.3
+h5py==2.9.0
+HeapDict==1.0.1
+html5lib==1.0.1
+hyperlink==19.0.0
+idna==2.8
+image==1.5.27
+imageai==2.1.5
+imageio==2.6.1
+imageio-ffmpeg==0.4.2
+imagesize==1.1.0
+importlib-metadata==0.23
+imutils==0.5.3
+incremental==17.5.0
+ipykernel==5.1.2
+ipython==7.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.15.1
+Jinja2==2.10.3
+joblib==0.13.2
+json5==0.8.5
+jsonschema==3.0.2
+jupyter==1.0.0
+jupyter-client==5.3.3
+jupyter-console==6.0.0
+jupyter-core==4.5.0
+jupyterlab==1.1.4
+jupyterlab-server==1.0.6
+kaggle==1.5.12
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+keyring==18.0.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.2
+libarchive-c==2.8
+llvmlite==0.29.0
+locket==0.2.0
+lxml==4.4.1
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+mccabe==0.6.1
+menuinst==1.4.16
+mistune==0.8.4
+mkl-fft==1.0.14
+mkl-random==1.1.0
+mkl-service==2.3.0
+mock==3.0.5
+more-itertools==7.2.0
+MouseInfo==0.1.3
+moviepy==1.0.3
+mpmath==1.1.0
+msgpack==0.6.1
+multipledispatch==0.6.0
+murmurhash==1.0.4
+nameparser==1.0.6
+navigator-updater==0.2.1
+nbconvert==5.6.0
+nbformat==4.4.0
+networkx==2.4
+nltk==3.5
+nose==1.3.7
+notebook==6.0.1
+numba==0.45.1
+numexpr==2.7.0
+numpy==1.19.2
+numpydoc==0.9.1
+olefile==0.46
+opencv-contrib-python==4.4.0.44
+opencv-python==3.4.4.19
+opendatasets==0.1.10
+openpyxl==3.0.0
+packaging==19.2
+pandas==0.25.1
+pandocfilters==1.4.2
+parso==0.5.1
+partd==1.0.0
+path.py==12.0.1
+pathlib2==2.3.5
+patsy==0.5.1
+pdfminer==20191125
+pep8==1.7.1
+pickleshare==0.7.5
+Pillow==6.2.0
+pipreqs==0.4.10
+pkginfo==1.5.0.1
+plac==1.1.3
+pluggy==0.13.0
+ply==3.11
+preshed==3.0.3
+proglog==0.1.9
+prometheus-client==0.7.1
+prompt-toolkit==2.0.10
+protobuf==3.15.8
+psutil==5.6.3
+pure-python-adb==0.2.6.dev0
+py==1.8.0
+py-getch==1.0.1
+pyarrow==3.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.50
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycryptodome==3.9.8
+pycryptodomex==3.9.4
+pycurl==7.43.0.3
+pydeck==0.6.1
+PyDictionary==2.0.1
+pyflakes==2.1.1
+PyGetWindow==0.0.8
+Pygments==2.4.2
+PyHamcrest==1.9.0
+pylint==2.4.2
+pymongo==3.11.3
+PyMsgBox==1.0.8
+PyMuPDF==1.17.3
+pynput==1.6.8
+pyodbc==4.0.27
+pyOpenSSL==19.0.0
+pyparsing==2.4.2
+PyPDF2==1.26.0
+pyperclip==1.8.0
+pypiwin32==223
+PyQt5==5.14.0
+PyQt5-sip==12.7.0
+PyQtWebEngine==5.14.0
+pyreadline==2.1
+PyRect==0.1.4
+pyrsistent==0.15.4
+PyScreeze==0.1.26
+pysmi==0.3.4
+pysnmp==4.4.12
+PySocks==1.7.1
+pytesseract==0.3.6
+pytest==5.2.1
+pytest-arraydiff==0.3
+pytest-astropy==0.5.0
+pytest-doctestplus==0.4.0
+pytest-openfiles==0.4.0
+pytest-remotedata==0.3.2
+python-bidi==0.4.2
+python-dateutil==2.8.0
+python-docx==0.8.10
+python-slugify==4.0.1
+pyttsx==1.1
+pyttsx3==2.90
+PyTweening==1.0.3
+pytz==2019.3
+PyWavelets==1.1.1
 pywin32==223
+pywinpty==0.5.5
+PyYAML==5.1.2
+pyzmq==18.1.0
+QtAwesome==0.6.0
+qtconsole==4.5.5
+QtPy==1.9.0
+queuelib==1.5.0
+regex==2020.10.28
+requests==2.22.0
+rope==0.14.0
+ruamel-yaml==0.15.46
+scikit-image==0.15.0
+scikit-learn==0.21.3
+scipy==1.3.1
+Scrapy==1.0.3
+seaborn==0.9.0
+selenium==3.141.0
+Send2Trash==1.5.0
+service-identity==18.1.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.12.0
+sk-video==1.1.10
+sl4a-pydroid-mock-api==0.4.1
+smmap==3.0.5
+snowballstemmer==2.0.0
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.9.3
+spacy==2.3.2
+Sphinx==2.2.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.1.2
+spyder==3.3.6
+spyder-kernels==0.5.2
+SQLAlchemy==1.3.9
+sqlparse==0.3.0
+srsly==1.0.2
+statsmodels==0.10.1
+streamlit==0.78.0
+sympy==1.4
+tables==3.5.2
+tblib==1.4.0
+tensor==0.3.6
+terminado==0.8.2
+tesseract==0.1.3
+testpath==0.4.2
+text-unidecode==1.3
+textblob==0.15.3
+thinc==7.4.1
+toml==0.10.2
+toolz==0.10.0
+torch==1.8.0+cpu
+torchaudio==0.8.0
+torchvision==0.9.0+cpu
+tornado==6.0.3
+tqdm==4.51.0
+traitlets==4.3.3
+Twisted==19.10.0
+typing-extensions==3.7.4.3
+tzlocal==2.1
+unicodecsv==0.14.1
+urllib3==1.24.2
+utils==1.0.0
+validators==0.18.2
+w3lib==1.22.0
+wasabi==0.8.0
+watchdog==2.0.2
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt==1.11.2
+xlrd==1.2.0
+XlsxWriter==1.2.1
+xlwings==0.15.10
+xlwt==1.3.0
+xmltodict==0.12.0
+yarg==0.1.9
+zict==1.0.0
+zipp==0.6.0
+zope.interface==4.7.1
